CMF 2.1.0-beta2 (unreleased)

  Bug Fixes

    - Use a utility, registered for
      'Products.CMFDefault.interfaces.IHTMLScrubber', to perform scrubbing
      of HTML;  fall back to the old, hard-wired behavior.
      (http://www.zope.org/Collectors/CMF/452)

    - Remove antique usage of marker attributes in favor of interfaces,
      leaving BBB behind for places potentially affecting third-party code.
      (http://www.zope.org/Collectors/CMF/440)

    - Fixed DST-driven test breakage in CMFCalendar by adding an optional
      'zone' argument to the DublineCore methods which return string
      rednitions of date metadata.
     (http://www.zope.org/Collectors/CMF/476)

    - Favorite: Fixed UID handling broken in 2.1.0-beta.

    - CMFDefault: Removed CMFUid dependency inadvertently added in 2.1.0-beta.

    - CMFActionIcons: Fixed interface declarations added in 2.1.0-beta.

  Other

    - CMFUid.UniqueIdAnnotationTool: Annotation handling has been switched
      from triggering it through old-style manage_*-methods to using
      events. UID assigning behavior has been made more flexible. Please
      review CMFUid/README.txt for information about the current
      behavior and the new features. 
      (http://www.zope.org/Collectors/CMF/474)


CMF 2.1.0-beta (2007/03/09)

  IMPORTANT NOTE:

    If you upgrade an existing CMF instance to CMF 2.1, please see
    INSTALL.txt for instructions on how to run a separate upgrade script.

  New Features

    - CMFCalendar: Zope3 style browser views are now used by default.
      An additional setup profile allows you to hook up the oldstyle skins and
      to make customizations TTW.

    - DirectoryView: Added 'registerDirectory' ZCML directive.
      Using the old registerDirectory method in __init__.py is now deprecated.
      See zcml.IRegisterDirectoryDirective for details.

    - DirectoryView: Added support for non-product packages.
      This introduces new registry keys. Old registry keys stored in